--- a/web/src/dashApplication.module.scss
+++ b/web/src/dashApplication.module.scss
@@ -143,3 +143,15 @@
   width: 100%;
   gap: $UKGap;
 }
+
+.parameterContainer {
+  gap: $UKGap;
+
+  .heading {
+    margin-bottom: $UKGap;
+  }
+
+  .input {
+    margin-bottom: $UKGap;
+  }
+}
